--- a/index.html
+++ b/index.html
@@ -276,7 +276,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h3>This is going to be one of the most exciting FA Cups in recent times. The competition has HISTORY,
+                    <h3 style="text-transform: none; font-family: cursive;" data-aos="zoom-out"
+                    data-aos-duration="900"
+                    data-aos-easing="ease-out-quart">This is going to be one of the most exciting FA Cups in recent times. The competition has HISTORY,
                         CHARACTER, and COLOR, and one of the greatest Nigeria Football Content base, that can engender
                         followership of clubs, create an avenue for new supporters and FANS (MUSIC AND MOVIE) to be
                         introduced to Nigerian football.  </br></h3>
@@ -299,14 +301,18 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="col-md-4 col-sm-6 col-xs-12" data-aos="slide-up"
+                    data-aos-duration="900"
+                    data-aos-easing="ease-out-quart">
                         <div class="feature-2">
                             <div class="media">
                                 <div class="pull-left">
                                     <i class="fa fa-magic"></i>
                                     <div class="border"></div>
                                 </div>
-                                <div class="media-body">
+                                <div class="media-body" data-aos="slide-up"
+                                data-aos-duration="900"
+                                data-aos-easing="ease-out-quart">
                                     <h4 class="media-heading">Home</h4>
                                     <p>We ensure that your website helps 
                                         your company reach her pinnacle.
@@ -315,70 +321,90 @@
                             </div>
                         </div>
                     </div><!-- /.col-md-4 -->
-                    <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="col-md-4 col-sm-6 col-xs-12" data-aos="slide-up"
+                    data-aos-duration="900"
+                    data-aos-easing="ease-out-quart">
                         <div class="feature-2">
                             <div class="media">
                                 <div class="pull-left">
                                     <i class="fa fa-css3"></i>
                                     <div class="border"></div>
                                 </div>
-                                <div class="media-body">
+                                <div class="media-body" data-aos="slide-up"
+                                data-aos-duration="900"
+                                data-aos-easing="ease-out-quart">
                                     <h4 class="media-heading">NEWS</h4>
                                     <p>We provide digital marketing services to companies across Nigeria</p>
                                 </div>
                             </div>
                         </div>
                     </div><!-- /.col-md-4 -->
-                    <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="col-md-4 col-sm-6 col-xs-12" data-aos="slide-up"
+                    data-aos-duration="900"
+                    data-aos-easing="ease-out-quart">
                         <div class="feature-2">
                             <div class="media">
                                 <div class="pull-left">
                                     <i class="fa fa-wordpress"></i>
                                     <div class="border"></div>
                                 </div>
-                                <div class="media-body">
+                                <div class="media-body" data-aos="slide-up"
+                                data-aos-duration="900"
+                                data-aos-easing="ease-out-quart"> 
                                     <h4 class="media-heading">FIXTURES</h4>
                                     <p>We educate students and help them build a strong background in coding/technology</p>
                                 </div>
                             </div>
                         </div>
                     </div><!-- /.col-md-4 -->
-                    <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="col-md-4 col-sm-6 col-xs-12" data-aos="slide-up"
+                    data-aos-duration="900"
+                    data-aos-easing="ease-out-quart">
                         <div class="feature-2">
                             <div class="media">
                                 <div class="pull-left">
                                     <i class="fa fa-plug"></i>
                                     <div class="border"></div>
                                 </div>
-                                <div class="media-body">
+                                <div class="media-body" data-aos="slide-up"
+                                data-aos-duration="900"
+                                data-aos-easing="ease-out-quart">
                                     <h4 class="media-heading">RULES & REGULATIONS</h4>
                                     <p>We help businesses draw out meaningful, actionable insigts for better decision making </p>
                                 </div>
                             </div>
                         </div>
                     </div><!-- /.col-md-4 -->
-                    <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="col-md-4 col-sm-6 col-xs-12" data-aos="slide-up"
+                    data-aos-duration="900"
+                    data-aos-easing="ease-out-quart">
                         <div class="feature-2">
                             <div class="media">
                                 <div class="pull-left">
                                     <i class="fa fa-joomla"></i>
                                     <div class="border"></div>
                                 </div>
-                                <div class="media-body">
+                                <div class="media-body" data-aos="slide-up"
+                                data-aos-duration="900"
+                                data-aos-easing="ease-out-quart">
                                     <h4 class="media-heading">ABOUT</h4>
                                     <p>We assist bussinesses to plan and organize specific task towards completion</p>
                                 </div>
                             </div>
                         </div>
                     </div><!-- /.col-md-4 -->
-                    <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="col-md-4 col-sm-6 col-xs-12" data-aos="slide-up"
+                    data-aos-duration="900"
+                    data-aos-easing="ease-out-quart">
                         <div class="feature-2">
                             <div class="media">
                                 <div class="pull-left">
                                     <i class="fa fa-cube"></i>
                                     <div class="border"></div>
                                 </div>
-                                <div class="media-body">
+                                <div class="media-body" data-aos="slide-up"
+                                data-aos-duration="900"
+                                data-aos-easing="ease-out-quart">
                                     <h4 class="media-heading">CONTACT US</h4>
                                     <p>We help businesses research, write, gather, organize, and edit information for publication</p>
                                 </div>
